--- a/SpaceRaft/SpaceRaft.vcxproj.filters
+++ b/SpaceRaft/SpaceRaft.vcxproj.filters
@@ -31,29 +31,29 @@
     <Filter Include="Archivos de origen\Item">
       <UniqueIdentifier>{b63a3ebd-84a2-4142-88a7-736fb36fcded}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Archivos de encabezado\Tile">
-      <UniqueIdentifier>{a5fdfb46-a923-476b-95bd-1a07a8ac1f6e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de origen\Tile">
-      <UniqueIdentifier>{b3314ff2-434a-46bb-a215-6833a612734e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Archivos de encabezado\Managers">
       <UniqueIdentifier>{3effd37e-47f2-420f-afc9-6b500faece60}</UniqueIdentifier>
     </Filter>
     <Filter Include="Archivos de origen\Managers">
       <UniqueIdentifier>{4f85f250-ba18-4874-92c6-7e1714152231}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Archivos de encabezado\Pointers">
-      <UniqueIdentifier>{4bb3950d-b92c-4c58-b7bd-326eca2b8249}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de origen\Pointers">
-      <UniqueIdentifier>{f3e9053f-2834-4a11-8e2f-165ee19277f0}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Archivos de origen\Buildings">
       <UniqueIdentifier>{6fad088b-03ec-4cac-9669-ab6d2a5a379c}</UniqueIdentifier>
     </Filter>
     <Filter Include="Archivos de encabezado\Buildings">
       <UniqueIdentifier>{5a95674e-b40b-4bb8-85bc-2117c7a5877a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de origen\GameObjects\Tile">
+      <UniqueIdentifier>{b3314ff2-434a-46bb-a215-6833a612734e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de origen\GameObjects\Pointers">
+      <UniqueIdentifier>{f3e9053f-2834-4a11-8e2f-165ee19277f0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de encabezado\GameObjects\Tile">
+      <UniqueIdentifier>{a5fdfb46-a923-476b-95bd-1a07a8ac1f6e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de encabezado\GameObjects\Pointers">
+      <UniqueIdentifier>{4bb3950d-b92c-4c58-b7bd-326eca2b8249}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -94,16 +94,16 @@
       <Filter>Archivos de encabezado\Item</Filter>
     </ClInclude>
     <ClInclude Include="Tile.h">
-      <Filter>Archivos de encabezado\Tile</Filter>
+      <Filter>Archivos de encabezado\GameObjects\Tile</Filter>
     </ClInclude>
-    <ClInclude Include="ShipFloor.h">
-      <Filter>Archivos de encabezado\Tile</Filter>
+    <ClInclude Include="RustyFloor.h">
+      <Filter>Archivos de encabezado\GameObjects\Tile</Filter>
     </ClInclude>
     <ClInclude Include="TileImageNotFound.h">
-      <Filter>Archivos de encabezado\Tile</Filter>
+      <Filter>Archivos de encabezado\GameObjects\Tile</Filter>
     </ClInclude>
     <ClInclude Include="EmptyTile.h">
-      <Filter>Archivos de encabezado\Tile</Filter>
+      <Filter>Archivos de encabezado\GameObjects\Tile</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
       <Filter>Archivos de encabezado\GameObjects</Filter>
@@ -118,19 +118,28 @@
       <Filter>Archivos de encabezado\Managers</Filter>
     </ClInclude>
     <ClInclude Include="TilePlacingPointer.h">
-      <Filter>Archivos de encabezado\Pointers</Filter>
+      <Filter>Archivos de encabezado\GameObjects\Pointers</Filter>
     </ClInclude>
     <ClInclude Include="BuildingPlacingPointer.h">
-      <Filter>Archivos de encabezado\Pointers</Filter>
+      <Filter>Archivos de encabezado\GameObjects\Pointers</Filter>
     </ClInclude>
     <ClInclude Include="Pointer.h">
-      <Filter>Archivos de encabezado\Pointers</Filter>
+      <Filter>Archivos de encabezado\GameObjects\Pointers</Filter>
     </ClInclude>
     <ClInclude Include="Building.h">
       <Filter>Archivos de encabezado\Buildings</Filter>
     </ClInclude>
     <ClInclude Include="ShipManager.h">
       <Filter>Archivos de encabezado\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="AncientFloor.h">
+      <Filter>Archivos de encabezado\GameObjects\Tile</Filter>
+    </ClInclude>
+    <ClInclude Include="TileRemovePointer.h">
+      <Filter>Archivos de encabezado\GameObjects\Pointers</Filter>
+    </ClInclude>
+    <ClInclude Include="BuildingRemovePointer.h">
+      <Filter>Archivos de encabezado\GameObjects\Pointers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -174,16 +183,16 @@
       <Filter>Archivos de origen\Item</Filter>
     </ClCompile>
     <ClCompile Include="Tile.cpp">
-      <Filter>Archivos de origen\Tile</Filter>
+      <Filter>Archivos de origen\GameObjects\Tile</Filter>
     </ClCompile>
-    <ClCompile Include="ShipFloor.cpp">
-      <Filter>Archivos de origen\Tile</Filter>
+    <ClCompile Include="RustyFloor.cpp">
+      <Filter>Archivos de origen\GameObjects\Tile</Filter>
     </ClCompile>
     <ClCompile Include="TileImageNotFound.cpp">
-      <Filter>Archivos de origen\Tile</Filter>
+      <Filter>Archivos de origen\GameObjects\Tile</Filter>
     </ClCompile>
     <ClCompile Include="EmptyTile.cpp">
-      <Filter>Archivos de origen\Tile</Filter>
+      <Filter>Archivos de origen\GameObjects\Tile</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
       <Filter>Archivos de origen\GameObjects</Filter>
@@ -198,19 +207,28 @@
       <Filter>Archivos de origen\Managers</Filter>
     </ClCompile>
     <ClCompile Include="TilePlacingPointer.cpp">
-      <Filter>Archivos de origen\Pointers</Filter>
+      <Filter>Archivos de origen\GameObjects\Pointers</Filter>
     </ClCompile>
     <ClCompile Include="BuildingPlacingPointer.cpp">
-      <Filter>Archivos de origen\Pointers</Filter>
+      <Filter>Archivos de origen\GameObjects\Pointers</Filter>
     </ClCompile>
     <ClCompile Include="Pointer.cpp">
-      <Filter>Archivos de origen\Pointers</Filter>
+      <Filter>Archivos de origen\GameObjects\Pointers</Filter>
     </ClCompile>
     <ClCompile Include="ShipManager.cpp">
       <Filter>Archivos de origen\Managers</Filter>
     </ClCompile>
     <ClCompile Include="Building.cpp">
       <Filter>Archivos de origen\Buildings</Filter>
+    </ClCompile>
+    <ClCompile Include="AncientFloor.cpp">
+      <Filter>Archivos de origen\GameObjects\Tile</Filter>
+    </ClCompile>
+    <ClCompile Include="TileRemovePointer.cpp">
+      <Filter>Archivos de origen\GameObjects\Pointers</Filter>
+    </ClCompile>
+    <ClCompile Include="BuildingRemovePointer.cpp">
+      <Filter>Archivos de origen\GameObjects\Pointers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
